Fix for suspension jumpiness. Zs colour

--- a/src/css/suspended.css
+++ b/src/css/suspended.css
@@ -190,6 +190,9 @@ body.img-preview-mode .gsTopBar {
     animation: spinner 0.6s linear infinite;
     z-index: 100;
 }
+.suspendedTextWrap {
+    height: 60px; /* stops slight jump when suspending */
+}
 .waking .suspendedTextWrap {
     opacity: 0;
 }
